# Estruturas-de-Dados-Prova-2

./: CMakeLists.txt  readme.md
.devcontainer/: Dockerfile  devcontainer.json
include/: fila.hpp  pilha.hpp  posfixa.hpp
src/: posfixa.cpp
test/: fila.cpp  pilha.cpp  posfixa.cpp
